--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>&lt;title&gt; element</title>
   </head>
   <body>
-    <h1>&lt;h1&gt; element</h1>
+    <!-- third-generation iPad with high-resolution Retina display: -->
+<link
+  rel="apple-touch-icon-precomposed"
+  sizes="144x144"
+  href="https://developer.mozilla.org/static/img/favicon144.png" />
+<!-- iPhone with high-resolution Retina display: -->
+<link
+  rel="apple-touch-icon-precomposed"
+  sizes="114x114"
+  href="https://developer.mozilla.org/static/img/favicon114.png" />
+<!-- first- and second-generation iPad: -->
+<link
+  rel="apple-touch-icon-precomposed"
+  sizes="72x72"
+  href="https://developer.mozilla.org/static/img/favicon72.png" />
+<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+<link
+  rel="apple-touch-icon-precomposed"
+  href="https://developer.mozilla.org/static/img/favicon57.png" />
+<!-- basic favicon -->
+<link
+  rel="icon"
+  href="https://developer.mozilla.org/static/img/favicon32.png" />
   </body>
 </html>
