--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-US">
   <head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>&lt;title&gt; element</title>
+    <title>Meta examples</title>
+    
+    <meta name="author" content="Chris Mills">
+    <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
+
+    <meta property="og:image" content="https://developer.mozilla.org/mdn-social-share.png">
+    <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
+    <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
+
+    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <!-- third-generation iPad with high-resolution Retina display: -->
-<link
-  rel="apple-touch-icon-precomposed"
-  sizes="144x144"
-  href="https://developer.mozilla.org/static/img/favicon144.png" />
-<!-- iPhone with high-resolution Retina display: -->
-<link
-  rel="apple-touch-icon-precomposed"
-  sizes="114x114"
-  href="https://developer.mozilla.org/static/img/favicon114.png" />
-<!-- first- and second-generation iPad: -->
-<link
-  rel="apple-touch-icon-precomposed"
-  sizes="72x72"
-  href="https://developer.mozilla.org/static/img/favicon72.png" />
-<!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-<link
-  rel="apple-touch-icon-precomposed"
-  href="https://developer.mozilla.org/static/img/favicon57.png" />
-<!-- basic favicon -->
-<link
-  rel="icon"
-  href="https://developer.mozilla.org/static/img/favicon32.png" />
+    <h1>Meta examples</h1>
+
+    <p>Japanese example: ご飯が熱い。</p>
   </body>
 </html>
