--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Meta examples</title>
-    
-    <meta name="author" content="Chris Mills">
-    <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
+<h1>The Crushing Bore</h1>
 
-    <meta property="og:image" content="https://developer.mozilla.org/mdn-social-share.png">
-    <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
-    <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
+<p>By Chris Mills</p>
 
-    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <h1>Meta examples</h1>
+<h2>Chapter 1: The dark night</h2>
 
-    <p>Japanese example: ご飯が熱い。</p>
+<p>
+  It was a dark night. Somewhere, an owl hooted. The rain lashed down on the…
+</p>
+
+<h2>Chapter 2: The eternal silence</h2>
+
+<p>Our protagonist could not so much as a whisper out of the shadowy figure…</p>
+
+<h3>The specter speaks</h3>
+
+<p>
+  Several more hours had passed, when all of a sudden the specter sat bolt
+  upright and exclaimed, "Please have mercy on my soul!"
+</p> <p>Japanese example: ご飯が熱い。</p>
   </body>
 </html>
