--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <p>Lets start by showing you the <a href="index_html.txt"> HTML file used to create this webpage</a>  you are looking at right now.</p>
 
-    <p>First thing to note is the  <a href="basic-html-format.txt"> HTML basic format</a> used to create any webpage. If you are using "Visual Studio Code" as your text editor, you can generate the HTML skeleton file by simply entering "!" in the editor, assuming you have added the "emmet" extension to the "Visual Studio Code" editor.</p>
+    <p>First First First thing to note is the  <a href="basic-html-format.txt"> HTML basic format</a> used to create any webpage. If you are using "Visual Studio Code" as your text editor, you can generate the HTML skeleton file by simply entering "!" in the editor, assuming you have added the "emmet" extension to the "Visual Studio Code" editor.</p>
 
     <h2>Links to important GitHub documentation</h2>
 
