--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
       <li><a href="https://cli.github.com/">GitHub CLI</a></li>
     </ul>
 
+  <p>
+  Want to contact a specific staff member? Find details on our
+  <a href="contacts.html">contacts page</a>.    
+  </p>
+
+    
   </body>
 </html>
