--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
       <li><a href="social.html">Social</a></li>
     </ul><!-- put navigation menu just below here -->
 
-    <h1>Contacts Page</h1
+    <h1>My contacts page</h1>
 
     <p>Welcome to my contacts page, feel free to contact us with your concerns at the following phone number.</p>
   </body>
