--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+
+    <h2 id="Mailing_address">Mailing address</h2>
+
     <!-- put navigation menu just below here -->
 
     <ul>
@@ -46,6 +49,11 @@
     <p>
     Want to contact a specific staff member? Find details on our
     <a href="contacts.html">contacts page</a>.    
+    </p>
+
+    <p>
+      Want to write us a letter? Use our
+      <a href="contacts.html#Mailing_address">mailing address</a>.
     </p>
 
     
