--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
+    <h2 id="Mailing_address">Mailing address</h2>
+    
     <!-- put navigation menu just below here -->
     
     <ul>
