--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- put navigation menu just below here -->
 
+    <p>Testing Github interaction with Hostinger</p>
+
     <ul>
       <li>Home</li>
       <li><a href="pictures.html">Pictures</a></li>
